[package]
name = "le-petit-lapin"
version = "0.1.0"
edition = "2021"
links = "x11"
description = "The cute X window manager"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = {version = "1.2.0", features = ["xkb", "xinerama", "debug_atom_names"]}
x11 = "2.21.0"
